[VK] Hide the keyboard when interacting with the shelf.

When using the floating keyboard, it tends to be placed near the bottom
of the screen. This blocks the shelf and is annoying when you need to
interact with it (e.g. tapping on the status area to bring up quick
settings).

We'll hide the virtual keyboard when tapping/clicking anywhere on the
shelf. Since "hide virtual keyboard when user does something" seems to
be a common pattern, we add a new method in KeyboardController called
HideKeyboardImplicitlyByUser to represent such situations. It's
different to the other ways of hiding the keyboard in two ways:

1) It doesn't hide the a11y (locked) keyboard.
2) It doesn't activate the "transient blur" feature. So when something
   focuses right after the keyboard hides, it doesn't pop up again.

It also nicely mirrors HideKeyboard(Explicitly)ByUser, which we will
rename in a follow up patch.

Bug: 893859
Change-Id: I9ba597b3f4b836566da89b7d559808bee80e0dc8
Reviewed-on: https://chromium-review.googlesource.com/c/1282514
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600216}
Former-commit-id: ad3bb52111ddc5896b0343ea891a4817de901298