ash/wm/overview/window_selector_controller.cc
@@ -267,9 +267,7 @@ bool WindowSelectorController::ToggleOverview(
   // Hide the virtual keyboard as it obstructs the overview mode.
   // Don't need to hide if it's the a11y keyboard, as overview mode
   // can accept text input and it resizes correctly with the a11y keyboard.
-  auto* keyboard_controller = keyboard::KeyboardController::Get();
-  if (!keyboard_controller->keyboard_locked())
-    keyboard_controller->HideKeyboardByUser();
+  keyboard::KeyboardController::Get()->HideKeyboardImplicitlyByUser();
 
   auto windows = Shell::Get()->mru_window_tracker()->BuildMruWindowList();
 
